# graphpfn

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
LICENSES/: TabICL.txt
exp/g2t_limix/finetune/amazon-ratings/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/artnet-exp/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/artnet-views/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/avazu-ctr/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/city-reviews/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/city-roads-M/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/facebook/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/hm-prices/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/pubmed/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/questions/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/tolokers-2/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/twitch-views/: evaluation.toml  tuning.toml
exp/g2t_limix/finetune/wiki-cs/: evaluation.toml  tuning.toml
exp/g2t_limix/icl/amazon-ratings/: evaluation.toml  tuning.toml
exp/gnn/gt/pubmed/: tuning.toml  (+1 more)
exp/graphpfn-pretrain/: pretrain.toml
exp/random-adapters/amazon-ratings/: evaluation.toml  tuning.toml
exp/random-adapters/artnet-exp/: evaluation.toml  tuning.toml
exp/random-adapters/artnet-views/: evaluation.toml  tuning.toml
exp/random-adapters/avazu-ctr/: tuning.toml
exp/random-adapters/city-reviews/: tuning.toml
exp/random-adapters/city-roads-M/: evaluation.toml  tuning.toml
exp/random-adapters/facebook/: evaluation.toml  tuning.toml
exp/random-adapters/hm-prices/: evaluation.toml  tuning.toml
exp/random-adapters/pubmed/: tuning.toml
exp/random-adapters/questions/: evaluation.toml  tuning.toml
exp/random-adapters/tolokers-2/: evaluation.toml  tuning.toml
exp/random-adapters/twitch-views/: tuning.toml
exp/random-adapters/wiki-cs/: evaluation.toml  tuning.toml
lib/: __init__.py  data.py  deep.py  env.py  metrics.py  tfm.py  util.py
lib/graph/: __init__.py  data.py  deep.py  structure_encodings.py  util.py
lib/graphpfn/: __init__.py  model.py  util.py
lib/graphpfn/prior/: __init__.py  activations.py  dataset.py  genload.py  gnn_scm.py  hp_sampling.py  prior_config.py  reg2cls.py  tree_scm.py  utils.py
lib/limix/: README.md  README_cn.md  environment.yml  inference_classifier.py  inference_regression.py  inference_retrival.sh
lib/limix/config/: simple.json  simpler.json
lib/limix/examples/: demo_classification.py  demo_missing_value_imputation.py  demo_regression.py
lib/limix/inference/: inference_method.py  predictor.py  preprocess.py
lib/limix/model/: encoders.py  layer.py  transformer.py
lib/limix/utils/: data_utils.py  loading.py
(+536 files in other folders)
